<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelFullName" />

        <EditText
            android:id="@+id/editTextNamePerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelYearOfBirth" />

        <Spinner
            android:id="@+id/spinnerBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/birth_arrays"
            android:prompt="@string/birth_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelGender" />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioBtMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strRadioBtMale" 
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioBtFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strRadioBtFemale" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelInterested" />

        <CheckBox
            android:id="@+id/checkBoxSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCheckBoxSport" />

        <CheckBox
            android:id="@+id/checkBoxGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCheckBoxGame" />

        <CheckBox
            android:id="@+id/checkBoxMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCheckBoxMusic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelDescription" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:gravity="top|start"
            android:lines="5"
            android:inputType="textMultiLine"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <!-- android:layout_alignParentBottom="true" -->
        
        <Button
            android:id="@+id/btnAddPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/btnAdd" />
        
        <Button
            android:id="@+id/btnBackToMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_centerInParent="true"
            android:text="@string/btnBackToMain" />
        
        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/btnReset" />
    </RelativeLayout>
</LinearLayout>